<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- SECTION: Android Studio -->
	<string name="app_name">JudgecardX</string>
	<string name="action_settings">Settings</string>

	<!-- SECTION: General -->
	<string name="unknownErrorTitle">Unknown Error</string>
	<string name="unknownErrorMsg">An unknown error occurred.</string>
	<string name="ok">OK</string>
	<string name="success">Success</string>
	<string name="judgecardx">JudgecardX</string>
	<string name="updateTitle">Update JudgecardX</string>
	<string name="updateMessage">Please update JudgecardX to the newest version, so you can access our new server.</string>
    <plurals name="person">
        <item quantity="one">person</item>
        <item quantity="other">people</item>
    </plurals>
    <plurals name="is">
        <item quantity="one">is</item>
        <item quantity="other">are</item>
    </plurals>
    <plurals name="has">
        <item quantity="one">has</item>
        <item quantity="other">have</item>
    </plurals>

	<!-- SECTION: Login -->
	<string name="signin">Sign In</string>
	<string name="app_title_judge">Judge</string>
	<string name="app_title_card">card</string>
	<string name="app_title_x">X</string>
	<string name="username">Username</string>
	<string name="password">Password</string>
	<string name="remember_me">Remember Me</string>
	<string name="forgot_login">Forgot Login</string>
	<string name="sign_up">Sign Up</string>
	<string name="bad_credentials_title">Invalid</string>
	<string name="bad_credentials_msg">Invalid username or password</string>
	<string name="generic_error_title">Unknown Error</string>
	<string name="generic_error_msg">An unknown error has occurred. Please try again later.</string>
	<string name="missing_login_field_title">Enter Login Info</string>
	<string name="missing_login_field_msg">Please enter both your username and password to login.</string>

	<!-- SECTION: Forgot Login -->
	<string name="email">Email</string>
	<string name="emailMe">Email Me</string>
	<string name="emailNotFoundTitle">Email Not Found</string>
	<string name="emailNotFoundMsg">That email is not in our database.</string>
	<string name="missing_email_forgot_title">Email Missing</string>
	<string name="missing_email_forgot_msg">Please enter your email address.</string>
	<string name="email_sent_title">Email Sent</string>
	<string name="email_sent_msg">An email has been sent to your address. You have 1 hour to reset your password.</string>

	<!-- SECTION: Sign Up -->
	<string name="confirm_password">Confirm Password</string>
	<string name="missing_required_field_title">Missing Field</string>
	<string name="missing_required_field_msg">Please fill out all of the fields.</string>
	<string name="signup_success_msg">Your account has been successfully created. You may now login with your information.</string>
	<string name="already_exists_title">Already Exists</string>
	<string name="already_exists_msg">Username and/or Email already exist in the database.</string>
	<string name="mismatched_passwords_title">Mismatched Passwords</string>
	<string name="mismatched_passwords_msg">Passwords don\&#39;t match.</string>

	<!-- SECTION: Master Fight List -->
	<string name="master_list_label">Master Fight List</string>
	<string name="today_label">Today</string>
</resources>
